<resources>
    <string name="app_name">ColegiApp</string>
    <string name="action_settings">Settings</string>
    <string name="lblBienvenida">¡Bienvenid@ a ColegiApp!</string>
    <string name="lblEntrada">Entra con tu número de teléfono...</string>
    <string name="lblTelefono">Tfno.</string>
    <string name="lblLoginAlternativo">...o mediante correo electrónico y contraseña...</string>
    <string name="txtCorreo">ejemplo@ejemplo.com</string>
    <string name="txtContrasena">Contraseña...</string>
    <string name="btnEntrar">Entrar</string>
</resources>
